--- a/institution/institution_ profile/perfil/style.css
+++ b/institution/institution_ profile/perfil/style.css
@@ -1,57 +1,57 @@
 *{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box; 
+   margin: 0;
+   padding: 0;
+   box-sizing: border-box; 
  }
 
-#container h1{
-      display: flex;  
-      flex-direction: column; 
-      align-items: center;
-      color: #05204A;
-      font-family: 'Poppins', sans-serif;
- }
 
- #container{
-  
+.container h1{
+   font-size: 70px;
+   display: flex;  
+   flex-direction: column; 
    align-items: center;
+   color: #05204A;
+   font-family: 'Poppins', sans-serif;
  }
 
  body {
+    width: 100vw;
+    height: 100vh;
    display: flex;
    flex-direction: column; 
    justify-content: center; 
+   background-position: center center;
 }
 
-#institutional_email{
+.institutional_email{
    background-color: #E3E3E3;
    border-radius: 10px;
    border-bottom: 1px solid #05204A;
    padding: 15px
 }
 
-#institution_name{
+.institution_name{
    background-color: #E3E3E3;
    border-radius: 10px;
    border-bottom: 1px solid #05204A;
    padding: 15px
 }
 
-#cnpj{
+.cnpj{
    background-color: #E3E3E3;
    border-radius: 10px;
    border-bottom: 1px solid #05204A;
    padding: 15px
 }
 
-#phone{
+.phone{
    background-color: #E3E3E3;
    border-radius: 10px;
    border-bottom: 1px solid #05204A;
    padding: 15px
 }
 
- #password{
+ .password{
    background-color: #E3E3E3;
    border-radius: 10px;
    border-bottom: 1px solid #05204A;
@@ -73,7 +73,7 @@
     background-color: rgba(240, 248, 255, 0);
     color: white;
     background-color: #0664B7;
-    border-radius: 20px;
+    border-radius: 30px;
  }
 
  #second-button{
@@ -81,15 +81,34 @@
     background-color: rgba(240, 248, 255, 0);
     color: white;
     background-color: #0664B7;
-    border-radius: 20px;
+    border-radius: 30px;
  }
 
- #third-button{
+#third-button{
    width: 100%;
-    background-color: rgba(240, 248, 255, 0);
-    color: white;
-    background-color: #044177;
-    border-radius: 20px;
- }
+   background-color: rgba(240, 248, 255, 0);
+   color: white;
+   background-color: #044177;
+   border-radius: 30px;
+}
+
+@media (max-width: 1200px) {
+
+   
+   .container{
+      padding: 50px; 
+      
+    }
+   .container h1{
+      text-align: center;
+      font-size: clamp(1rem, 10vw, 4.25rem); 
+      
+   }
+
+   form div{
+      max-width: 10px;
+   }
+}
+ 
 
  
