--- a/landing_page/home/style.css
+++ b/landing_page/home/style.css
@@ -15,7 +15,6 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    font-family: 'Poppins', sans-serif;
  }
 
  main{
@@ -36,15 +35,19 @@
  }
 
  main h1{
-   font-size: 100px
+   font-size: 100px;
+   font-family: 'Poppins', sans-serif;
 }
 
  main h2{
    margin: 3%;
-    font-size: 43px;
+    font-size: 50px;
+    font-family: 'Poppins', sans-serif;
+    font-family: 'Hind', sans-serif;
  }
 
- main .button{
+ main .botao{
+   font-family: 'Poppins', sans-serif;
     font-size: 43px;
     max-width: 26vw;
     border: 5px solid;
@@ -69,12 +72,12 @@
       font-size: clamp(0.5rem, 5vw, 2.6rem); 
    }
   
-   .button{
+   .botao{
       font-size: 5px;
       width: clamp(21.8rem, 10vw, 21rem);
    }
 
-   .button p{
+   .botao p{
       font-size: clamp(0.4rem, 2.5vw, 2.6rem);
    }
 }
