--- a/home/style.css
+++ b/home/style.css
@@ -7,7 +7,7 @@
  body{
     width: 100vw;
     height: 100vh;
-    background: url('../IMG/background.svg');
+    background: url('./img_landing_page/background.svg');
     background-blend-mode: darken;
     background-color: rgba(0, 0, 0, 0.452);
     background-position: center center;
@@ -35,27 +35,29 @@
  }
 
  main h1{
+   font-weight: 700;
    font-size: 100px;
    font-family: 'Poppins', sans-serif;
 }
 
  main h2{
    margin: 3%;
-    font-size: 50px;
-    font-family: 'Poppins', sans-serif;
-    font-family: 'Hind', sans-serif;
+   font-size: 50px;
+   font-weight: 400;
+   font-family: 'Poppins', sans-serif;
  }
 
  main .botao{
    font-family: 'Poppins', sans-serif;
-    font-size: 43px;
-    max-width: 26vw;
-    border: 5px solid;
-    background-color: rgba(240, 248, 255, 0);
-    color: white;
-    border-color: #0987F7;
-    border-radius: 10px;
-    padding: 10px;
+   font-weight: 600;
+   font-size: 35px;
+   max-width: 26vw;
+   border: 5px solid;
+   background-color: rgba(240, 248, 255, 0);
+   color: white;
+   border-color: #0987F7;
+   border-radius: 10px;
+   padding: 1% 3%;
  }
 
  @media (max-width: 1200px) {
