--- a/instituicao/style.css
+++ b/instituicao/style.css
@@ -93,7 +93,7 @@
    width: 100%;
    background-color: rgba(240, 248, 255, 0);
    color: white;
-   background-color: #044177;
+   background-color: #A71E34;
    border-radius: 30px;
    padding: 15px
 }
