--- a/instituicao/usuarios/cadastro/selecao/style.css
+++ b/instituicao/usuarios/cadastro/selecao/style.css
@@ -8,6 +8,7 @@
      height: 100vh;
      width: 100vw;
      padding: 2%;
+     font-family: 'Poppins', sans-serif;
  }
 
  .container{
@@ -15,6 +16,7 @@
      flex-direction: column;
      align-items: center;
      justify-content: space-between;
+     width: 100%;
  }
 
 .card_azul{
@@ -24,7 +26,7 @@
     justify-content: space-between;
     width: 30vw;
     height: 30vh;
-    background-color: #044177;
+    background-color: #0664B7;
     border-radius: 20px;
     text-align: center;
     color: white;
@@ -33,25 +35,24 @@
 
 .card_azul h1{
     font-size: 1.5vw;
-    font-family: 'Poppins', sans-serif;
     font-weight: 600;
     
 }
 
-img{
+.img{
     width: 100%;
     margin-bottom: 1%;
     margin-top: 2%;
 }
 
 #ul{
-    width: 100%;
+    width: 30vw;
     border: 2px solid;
     border-color: #05204A;
     border-radius: 20px;
     padding: 2%;
     color: #044177;
-    font-family: 'Poppins', sans-serif;
+    
 }
 
 #li{
@@ -60,6 +61,7 @@ img{
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
+    padding: 0 5%;
 }
 
 #icone{
@@ -94,7 +96,7 @@ img{
  #icon i {
     position: absolute;
     right: 7%;
-    top: 63%;
+    top: 10%;
     padding: 9px 8px;
     color: #808080;
     transition: 0.3s;
@@ -107,8 +109,8 @@ img{
   }
 
   #li h2{
+      font-size: 20px;
     color: #272727;
-    font-family: 'Poppins', sans-serif;
     font-weight: 400;
   }
 
@@ -120,3 +122,52 @@ img{
       font-size: 30px;
       font-weight: 400;
   }
+
+  .conteudo{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    text-align: center;
+  }
+
+  #terceiro_botao{
+      border: none;
+    margin-top: 2vh;
+     width: 100%;
+     background-color: rgba(240, 248, 255, 0);
+     color: white;
+     background-color: #044177;
+     font-family: 'Poppins', sans-serif;
+     font-weight: 700;
+     border-radius: 30px;
+     padding: 15px
+  }
+
+  .turma_selecionada{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 20vw;
+      height: 40vh;
+      padding: 5%;
+      background-color: #F4F4F4;
+      border-radius: 20px;
+      margin-left: 10%;
+      justify-content: space-between;
+  }
+
+  .titulo{
+      color: #044177;
+      font-size: 50px;
+    font-weight: 700;
+    margin: 1%;
+  }
+
+ .turma_selecionada p{
+    font-size: 30px;
+    margin-top: 5%;
+    font-weight: 400;
+}
+
+  
