ajustes no RF08

--- a/instituicao/perfil/infos_pagamento/editar/style.css
+++ b/instituicao/perfil/infos_pagamento/editar/style.css
@@ -63,6 +63,11 @@
      border: 5px solid;
      font-family: 'Poppins', sans-serif;
   }
+
+  .buttons{
+   display: flex;
+   flex-direction: row-reverse;
+}
  
   ::placeholder {
     font-family: 'Hind', sans-serif;
