--- a/instituicao/perfil/editar/style.css
+++ b/instituicao/perfil/editar/style.css
@@ -70,17 +70,22 @@
 
   #primeiro_botao{
    margin-top: 2vh;
-     width: 100%;
+     width:100%;
      background-color: rgba(240, 248, 255, 0);
      color: white;
      background-color: #C2C2C2;
      border-radius: 30px;
      padding: 15px
   }
+
+  .buttons{
+     display: flex;
+     flex-direction: row-reverse;
+  }
  
  #segundo_botao{
    margin-top: 2vh;
-    width: 100%;
+    width:100%;
     background-color: rgba(240, 248, 255, 0);
     color: white;
     background-color: #044177;
