--- a/instituicao/usuarios/cadastro/model/style.css
+++ b/instituicao/usuarios/cadastro/model/style.css
@@ -6,8 +6,6 @@
 
  body{
      height: 100vh;
-     width: 100vw;
-     padding: 2%;
      font-family: 'Poppins', sans-serif;
  }
 
@@ -25,7 +23,6 @@
     align-items: center;
     justify-content: space-between;
     width: 30vw;
-    height: 30vh;
     background-color: #0664B7;
     border-radius: 20px;
     text-align: center;
@@ -40,20 +37,30 @@
 }
 
 .img{
-    width: 100%;
-    margin-bottom: 1%;
-    margin-top: 2%;
+    width: 90vw;
+    margin: 2%;
 }
 
 #ul{
-    width: 30vw;
+    width: 100%;
     border: 2px solid;
     border-color: #05204A;
-    border-radius: 20px;
+    border-radius: 10px;
     padding: 2%;
     color: #044177;
-    
+    overflow-y: auto;
+    height: 50vh;
 }
+
+#ul::-webkit-scrollbar {
+    width: 12px;               /* width of the entire scrollbar */
+  }
+  
+#ul::-webkit-scrollbar-thumb {
+    background-color: #05204A;    /* color of the scroll thumb */
+    border-radius: 10px;       /* roundness of the scroll thumb */
+    border:none;  /* creates padding around scroll thumb */
+  }
 
 #li{
     border: none;
@@ -62,6 +69,7 @@
     align-items: center;
     justify-content: space-between;
     padding: 0 5%;
+    
 }
 
 #icone{
@@ -123,12 +131,15 @@
       font-weight: 400;
   }
 
+  
+
   .conteudo{
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
     text-align: center;
+    color: #272727;
   }
 
   #terceiro_botao{
@@ -141,39 +152,41 @@
      font-family: 'Poppins', sans-serif;
      font-weight: 700;
      border-radius: 30px;
-     padding: 15px
+     padding: 15px;
   }
 
   .turma_selecionada{
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 20vw;
-      height: 40vh;
-      padding: 5%;
-      background-color: #F4F4F4;
-      border-radius: 20px;
-      margin-left: 10%;
-      justify-content: space-between;
+    width: 100%;
+    height: 60vh;
+    padding: 3%;
+    background-color: #F4F4F4;
+    border-radius: 20px;
+    margin-left: 10%;
+    justify-content: space-between;
   }
 
+  .turma_selecionada h2{
+      font-size: 35px;
+      font-family: "Poppins";
+      font-weight: 400;
+  }
   .titulo{
       color: #044177;
-      font-size: 50px;
+      font-size: 40px;
     font-weight: 700;
-    margin: 1%;
   }
 
- .turma_selecionada p{
-    font-size: 30px;
-    margin-top: 5%;
-    font-weight: 400;
-}
-
 .modal {
-    display: flex;
-    width: 50%;
-    height: 50%;
+    display: none;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 90%;
     background-color: rgb(255, 255, 255);
     display: none;
     align-items: center;
@@ -181,6 +194,7 @@
     justify-content: center;
     font-family: 'Poppins', sans-serif;
     padding: 2%;
+    border-radius: 20px;
 }
 
 .modal h1{
@@ -188,26 +202,37 @@
     color: #05204A;
 }
 
+.bg{
+    position: fixed;
+    z-index: 1;
+    width: 100%;
+    height: 100%;
+    display: none;
+    background-blend-mode: darken;
+    background-color: rgba(0, 0, 0, 0.658);
+}
+
 #primeiro_botao{
     margin-top: 2vh;
-      width: 100%;
+      width: 98%;
       background-color: rgba(240, 248, 255, 0);
       color: white;
       font-weight: 700;
       border-radius: 30px;
       border: none;
       padding: 15px;
-      background-color: #044177;
+      background-color: #C2C2C2;
+      margin-right: 5%;
    }
   
   #segundo_botao{
     margin-top: 2vh;
-     width: 100%;
+     width: 98%;
      background-color: rgba(240, 248, 255, 0);
      color: white;
-     background-color: #C2C2C2;
+     background-color: #044177;
      border-radius: 30px;
-     ont-weight: 700;
+     font-weight: 700;
      border: none;
      padding: 15px
   }
@@ -245,3 +270,26 @@
     border-bottom: 1px solid #05204A;
     padding: 15px
  }
+
+ .buttons{
+    display: flex;
+    flex-direction: row-reverse;
+ }
+
+ @media (max-width: 1200px) {
+    .container{
+      max-width: 1100px;
+      padding: 2%;
+      
+    }
+
+    .card_azul h1{
+        text-align: center;
+        font-size: clamp(1rem, 10vw, 2rem); 
+    }
+
+    .titulo{
+        font-size: clamp(1rem, 10vw, 6.25rem); 
+    }
+}
+
