--- a/instituicao/usuarios/cadastro/style.css
+++ b/instituicao/usuarios/cadastro/style.css
@@ -4,17 +4,12 @@
     box-sizing: border-box; 
  }
 
- body{
-     height: 100vh;
-     width: 100vw;
-     padding: 2%;
- }
-
  .container{
      display: flex;
      flex-direction: column;
      align-items: center;
      justify-content: space-between;
+     padding: 2%;
  }
 
 .card_azul{
@@ -22,7 +17,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    width: 30vw;
+    width: 40%;
     height: 30vh;
     background-color: #044177;
     border-radius: 20px;
@@ -34,8 +29,7 @@
 .card_azul h1{
     font-size: 1.5vw;
     font-family: 'Poppins', sans-serif;
-    font-weight: 600;
-    
+    font-weight: 600; 
 }
 
 img{
@@ -48,11 +42,21 @@ img{
     width: 100%;
     border: 2px solid;
     border-color: #05204A;
-    border-radius: 20px;
+    border-radius: 10px;
     padding: 2%;
-    color: #044177;
-    font-family: 'Poppins', sans-serif;
+    overflow-y: auto;
+    height: 50vh;
 }
+
+#ul::-webkit-scrollbar {
+    width: 12px;               /* width of the entire scrollbar */
+  }
+  
+#ul::-webkit-scrollbar-thumb {
+    background-color: #05204A;    /* color of the scroll thumb */
+    border-radius: 10px;       /* roundness of the scroll thumb */
+    border:none;  /* creates padding around scroll thumb */
+  }
 
 #li{
     border: none;
@@ -60,6 +64,7 @@ img{
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
+    padding: 0 5%;  
 }
 
 #icone{
@@ -120,3 +125,20 @@ img{
       font-size: 30px;
       font-weight: 400;
   }
+
+  
+@media (max-width: 1200px) {
+    .container{
+       padding: 2%;
+    }
+    .container h1{
+       display: flex;
+       font-size: clamp(0rem, 10vw, 4.3rem);
+       text-align: center;
+    }
+
+    .card_azul h1{
+        font-size: clamp(0rem, 10vw, 2.3rem);
+    }
+ }
+  
