--- a/home/compra/pagamento/pagamento.css
+++ b/home/compra/pagamento/pagamento.css
@@ -5,18 +5,26 @@ header {
 main {
     color: #000;
     height: 100vh;
+    display: flex;
+    flex-direction: column;
+    /* align-items: center; */
+}
+
+.titulo_infos_pagamento {
+    display: flex;
+    justify-content: left;
 }
 
 main h4 {
     margin-left: 20px;
     margin-top: 40px;
     margin-bottom: 5px;
+    font-weight: normal;
 }
 
 .infos_pagamento {
     width: 95vw;
     height: 120px;
-    background-color: tomato;
     display: flex;
     margin-left: 20px;
     flex-direction: column;
@@ -25,21 +33,225 @@ main h4 {
 .infos_pagamento .primeira_linha {
     display: flex;
     justify-content: space-between;
-    padding: 8px;
-    margin-right: 30px;
+    padding: 10px;
+    border: 1px solid #C2C2C2;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
 }
 
 .infos_pagamento .primeira_linha .container_pagamento {
     display: flex;
     gap: 15px;
-    
+}
+
+.infos_pagamento .primeira_linha .container_pagamento select {
+    border-radius: 5px;
+}
+
+.infos_pagamento .primeira_linha .preco_pedido {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    margin-right: 10px;
+}
+
+.infos_pagamento .primeira_linha .preco_pedido img {
+    width: 17px;
+    cursor: pointer;
 }
 
 .infos_pagamento .segunda_linha {
     display: flex;
     justify-content: right;
-    margin-right: 30px;
-    padding: 8px;
+    padding: 10px;
     align-items: center;
+    border: 1px solid #C2C2C2;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+}
+
+.infos_pagamento .segunda_linha .infos {
+    margin-right: 37px;
+    display: flex;
     gap: 50px;
 }
+
+.form_pagamento {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 95vw;
+    height: 620px;
+    background-color: #F5F6FC;
+    border: 1px solid #C2C2C2;
+    border-radius: 5px;
+    margin-left: 20px;
+}
+
+.form_pagamento label {
+    font-weight: bold;
+}
+
+.form_pagamento input {
+    height: 35px;
+    border-radius: 5px;
+    padding: 10px;
+    border: 2px solid #C2C2C2;
+}
+
+.form_pagamento .infos_gerais {
+    display: flex;
+    /* flex-direction: column; */
+    width: 95vw;
+    height: 500px;
+}
+
+.form_pagamento .infos_instituicao, .cartao_instituicao {
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+    gap: 20px;
+    padding: 20px;
+}
+
+.form_pagamento .infos_instituicao {
+    margin-left: 20px;
+    margin-right: 100px;
+}
+
+.form_pagamento .infos_instituicao input {
+    width: 250px;
+}
+
+.form_pagamento .infos_instituicao .input_instituicao {
+    display: flex;
+    justify-content: space-between;
+}
+
+.form_pagamento .cartao_instituicao input {
+    width: 550px;
+}
+
+.form_pagamento .cartao_instituicao {
+    display: flex;
+    align-items: center;
+    border-left: 1px solid #C2C2C2;
+}
+
+.form_pagamento .cartao_instituicao .inputs_cartao {
+    display: flex;
+    width: 550px;
+    gap: 20px;
+    margin-bottom: 20px;
+}
+
+.btn_finalizar {
+    height: 150px;
+    width: 95vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-top: 1px solid #C2C2C2;
+}
+
+.form_pagamento input[type="submit"] {
+    width: 450px;
+    height: 50px;
+    border: 1px solid;
+    background: #0987F7;
+    border-radius: 25px;
+    font-size: 18px;
+    color: #e9f4fb;
+    font-weight: 700;
+    cursor: pointer;
+    outline: none;
+    margin-bottom: 40px;
+  }
+  
+  .form_pagamento input[type="submit"]:hover {
+    border-color: #0987F7;
+    transition: .3s;
+  }
+
+  @media (max-width: 1200px) {
+
+    .form_pagamento label {
+        max-width: 80px;
+    }
+
+    .form_pagamento .infos_instituicao .input_instituicao {
+        display: flex;
+        gap: 30px;
+    }
+
+    .form_pagamento .cartao_instituicao input {
+        width: 400px;
+    }
+
+    .form_pagamento .cartao_instituicao .inputs_cartao {
+        width: 400px;
+    }
+  }
+
+  @media (max-width: 768px) {
+
+    .form_pagamento {
+        height: 1060px;
+        align-items: center;
+    }
+
+    .form_pagamento .infos_gerais {
+        height: 950px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 0px;
+    }
+
+    .form_pagamento, .infos_pagamento {
+        width: 90vw;
+    }
+
+    .form_pagamento .cartao_instituicao input {
+        width: 400px;
+    }
+
+    .form_pagamento .infos_instituicao {
+        margin-left: 100px;
+        width: 85vw;
+        
+    }
+
+    .form_pagamento .cartao_instituicao {
+        width: 90vw;
+        border-left: 0;
+        border-top: 1px solid #C2C2C2;
+    }
+
+    .form_pagamento .cartao_instituicao .inputs_cartao  {
+        justify-content: center;
+    }
+
+    .form_pagamento .cartao_instituicao img {
+        width: 250px;
+    }
+    
+    .form_pagamento input[type="submit"] {
+        width: 300px;
+    }
+
+    .btn_finalizar {
+        width: 89.5vw;
+        /* height: 100px; */
+        border-top: 1px solid #C2C2C2;
+        /* background-color: #0987F7; */
+        justify-content: center;
+        margin-left: 16px;
+
+    }
+
+    /* footer {
+        display: none;
+    } */
+
+  }
