--- a/instituicao/usuarios/cadastro/selecao/style.css
+++ b/instituicao/usuarios/cadastro/selecao/style.css
@@ -170,4 +170,37 @@
     font-weight: 400;
 }
 
+
+.modal {
+    display: none;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 90%;
+    background-color: rgb(255, 255, 255);
+    display: none;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    font-family: 'Poppins', sans-serif;
+    padding: 2%;
+    border-radius: 20px;
+}
+
+.modal h1{
+    font-weight: 700;
+    color: #05204A;
+}
+
+.bg{
+    position: fixed;
+    z-index: 1;
+    width: 100%;
+    height: 100%;
+    display: none;
+    background-blend-mode: darken;
+    background-color: rgba(0, 0, 0, 0.658);
+}
   
