--- a/instituicao/usuarios/cadastro/style.css
+++ b/instituicao/usuarios/cadastro/style.css
@@ -4,34 +4,61 @@
     box-sizing: border-box; 
  }
 
+ body{
+    height: 100vh;
+    width: 100vw;
+ }
+
  .container{
      display: flex;
      flex-direction: column;
      align-items: center;
-     justify-content: space-between;
      padding: 2%;
+     height: 100vh;
+    width: 100vw;
  }
+#ul::-webkit-scrollbar {
+    width: 12px;               /* width of the entire scrollbar */
+  }
+  
+#ul::-webkit-scrollbar-thumb {
+    background-color: #05204A;    /* color of the scroll thumb */
+    border-radius: 10px;       /* roundness of the scroll thumb */
+    border:none;  /* creates padding around scroll thumb */
+  }
 
-.card_azul{
-    display: flex;
-    flex-direction: column;
+.modal {
+    display: none;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 50vh;
+    background-color: rgb(255, 255, 255);
+    display: none;
     align-items: center;
+    flex-direction: column;
     justify-content: space-between;
-    width: 40%;
-    height: 30vh;
-    background-color: #044177;
-    border-radius: 20px;
-    text-align: center;
-    color: white;
-    padding: 3%;
-}
-
-.card_azul h1{
-    font-size: 1.5vw;
     font-family: 'Poppins', sans-serif;
-    font-weight: 600; 
+    padding: 2%;
+    border-radius: 20px;
 }
 
+.modal h1{
+    font-weight: 700;
+    color: #05204A;
+}
+
+.bg{
+    position: fixed;
+    z-index: 1;
+    width: 100%;
+    height: 100%;
+    display: none;
+    background-blend-mode: darken;
+    background-color: rgba(0, 0, 0, 0.658);
+}
 img{
     width: 100%;
     margin-bottom: 1%;
@@ -45,7 +72,6 @@ img{
     border-radius: 10px;
     padding: 2%;
     overflow-y: auto;
-    height: 50vh;
 }
 
 #ul::-webkit-scrollbar {
@@ -64,7 +90,7 @@ img{
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    padding: 0 5%;  
+    padding: 0 5%;
 }
 
 #icone{
@@ -126,6 +152,81 @@ img{
       font-weight: 400;
   }
 
+  #primeiro_botao{
+    margin-top: 2vh;
+      width: 98%;
+      background-color: rgba(240, 248, 255, 0);
+      color: white;
+      font-weight: 700;
+      border-radius: 30px;
+      border: none;
+      padding: 15px;
+      background-color: #C2C2C2;
+      margin-right: 5%;
+   }
+  
+  #segundo_botao{
+    margin-top: 2vh;
+     width: 98%;
+     background-color: rgba(240, 248, 255, 0);
+     color: white;
+     background-color: #044177;
+     border-radius: 30px;
+     font-weight: 700;
+     border: none;
+     padding: 15px
+  }
+
+  #terceiro_botao{
+    margin-top: 2vh;
+     width: 98%;
+     background-color: rgba(240, 248, 255, 0);
+     color: white;
+     background-color: #044177;
+     border-radius: 30px;
+     font-weight: 700;
+     border: none;
+     padding: 15px
+  }
+
+  .nome_do_usuario{
+    background-color: #E3E3E3;
+    border-radius: 10px;
+    border-bottom: 1px solid #05204A;
+    padding: 15px
+ }
+  .email_usuario{
+    background-color: #E3E3E3;
+    border-radius: 10px;
+    border-bottom: 1px solid #05204A;
+    padding: 15px
+ }
+ 
+ .senha{
+    background-color: #E3E3E3;
+    border-radius: 10px;
+    border-bottom: 1px solid #05204A;
+    padding: 15px
+ }
+ 
+ .tipo-select{
+    background-color: #E3E3E3;
+    border-radius: 10px;
+    border-bottom: 1px solid #05204A;
+    padding: 15px
+ }
+ 
+ .turma-select{
+    background-color: #E3E3E3;
+    border-radius: 10px;
+    border-bottom: 1px solid #05204A;
+    padding: 15px
+ }
+ 
+ .buttons{
+    display: flex;
+    flex-direction: row-reverse;
+ }
   
 @media (max-width: 1200px) {
     .container{
