--- a/instituicao/style.css
+++ b/instituicao/style.css
@@ -4,24 +4,36 @@
    box-sizing: border-box; 
  }
 
+ .bg{
+   position: fixed;
+   z-index: 1;
+   width: 100vw;
+   height: 100vh;
+   display: none;
+   flex-direction: column;
+   align-items: center;
+   background-blend-mode: darken;
+   background-color: rgba(0, 0, 0, 0.658);
+}
 
+ body {
+   height: 100vh; 
+   font-family: 'Poppins', sans-serif;
+   width: 100vw;
+   display: flex;
+   flex-direction: column; 
+   justify-content: center; 
+   align-items: center;
+}
 .container h1{
    font-size: 70px;
    display: flex;  
    flex-direction: column; 
    align-items: center;
    color: #05204A;
-   font-family: 'Poppins', sans-serif;
+   font-weight: 700;
+  
  }
-
- body {
-   height: 100vh;
-   width: 100vw;
-   display: flex;
-   flex-direction: column; 
-   justify-content: center; 
-   background-position: center center;
-}
 
 .email_institucional{
    background-color: #E3E3E3;
@@ -65,17 +77,22 @@
 }
 
  button{
-    padding: 10px;
+    padding: 10px;   
+    font-weight: 700;
     border: 5px solid;
-    font-family: 'Poppins', sans-serif;
  }
 
 .button{
    display: flex;
-}
+   text-decoration: none;
 
- ::placeholder {
-   font-family: 'Hind', sans-serif;
+ }
+
+
+.button a{
+   text-decoration: none;
+   color: white;
+   
 }
 
 #primeiro_botao{
@@ -85,9 +102,8 @@
     color: white;
     background-color: #0664B7;
     border-radius: 30px;
-    padding: 15px
- }
-
+    padding: 15px;
+}
  #segundo_botao{
    margin-top: 2vh;
     width: 100%;
@@ -113,37 +129,42 @@
    right: 0;
    bottom: 0;
    left: 0;
-   width: 30%;
-   height: 30%;
+   width: 50vw;
+   height: 60vh;
    background-color: rgb(255, 255, 255);
    display: none;
    align-items: center;
    flex-direction: column;
    text-align: center;
-   justify-content: center;
+   justify-content: space-around;
    font-family: 'Poppins', sans-serif;
    border-radius: 20px;
+   padding: 15px;
 }
 
 .modal h1{
-   font-size: 30px;
-   font-weight: 700;
+   font-size: 40px;
+   font-weight: 900;
    text-align: center;
    color: #05204A;
 }
 
 .modal h2{
    margin: 2% 0 2% 0;
-   font-size: 20px;
-   font-weight: 100;
+   font-size: 30px;
+   font-weight: 700;
    text-align: center;
    color: #A71E34;
 }
 
 .modal label{
-   font-size: 20px;
-   font-weight:1100;
+   font-size: 30px;
+   font-weight:400;
    color: #05204A;
+}
+
+.modal input{
+   width: 45vw;
 }
 
 .buttons{
@@ -154,19 +175,9 @@
    justify-content: center;
 }
 
-.bg{
-   position: fixed;
-   z-index: 1;
-   width: 100%;
-   height: 100%;
-   display: none;
-   background-blend-mode: darken;
-   background-color: rgba(0, 0, 0, 0.658);
-}
-
 #primeiro_botao_modal{
    margin-top: 2vh;
-     width: 70%;
+     width: 100%;
      background-color: rgba(240, 248, 255, 0);
      color: white;
      font-weight: 700;
@@ -179,7 +190,7 @@
  
  #segundo_botao_modal{
    margin-top: 2vh;
-    width: 70%;
+    width: 100%;
     background-color: rgba(240, 248, 255, 0);
     color: white;
     background-color: #044177;
