--- a/instituicao/usuarios/vizualizacao/style.css
+++ b/instituicao/usuarios/vizualizacao/style.css
@@ -5,8 +5,6 @@
  }
 
  body{
-     height: 100vh; 
-   width: 100vw;
     font-family: 'Poppins', sans-serif;
     
  }
@@ -15,6 +13,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    justify-content: space-betweena;
     
 }
  .container{
@@ -53,22 +52,6 @@
     width: 180%;
     margin-bottom: 10%;
 }
-  
- #icon i {
-    position: absolute;
-    right: 7%;
-    top: 63%;
-    padding: 9px 8px;
-    color: #808080;
-    transition: 0.3s;
-  }
-  
- #icon.inputIconBg i {
-    background-color: #aaa;
-    padding: 9px 4px;
-    border-radius: 4px 0 0 4px;
-  }
-
 
 .tipo_usuario ul {
     display: flex;
@@ -77,20 +60,20 @@
 }
 
 .modal-excluir {
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    width: 30%;
-    height: 30%;
-    background-color: rgb(255, 255, 255);
-    display: none;
-    align-items: center;
-    flex-direction: column;
-    text-align: center;
-    justify-content: center;
-    font-family: 'Poppins', sans-serif;
-    border-radius: 20px;
+  display: none;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 80vh;
+  background-color: rgb(255, 255, 255);
+  align-items: center;
+  flex-direction: column;
+  justify-content: space-between;
+  font-family: 'Poppins', sans-serif;
+  padding: 2%;
+  border-radius: 20px;
  }
  
  .modal-excluir h1{
@@ -185,7 +168,7 @@ h1{
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 20%;
+    width: 30%;
     height:80vh;
     padding: 1% 5%;
     background-color: #F4F4F4;
@@ -202,8 +185,7 @@ h1{
   }
 
  #turma_selecionada p{
-    font-size: 30px;
-    margin-top: 5%;
+    font-size: 20px;
     font-weight: 400;
 }
 
@@ -291,9 +273,8 @@ h1{
     bottom: 0;
     left: 0;
     width: 100%;
-    height: 50vh;
+    height: 80vh;
     background-color: rgb(255, 255, 255);
-    display: none;
     align-items: center;
     flex-direction: column;
     justify-content: space-between;
@@ -303,21 +284,20 @@ h1{
 }
 
 .modal-editar {
-    display: none;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 50vh;
-    background-color: rgb(255, 255, 255);
-    display: none;
-    align-items: center;
-    flex-direction: column;
-    justify-content: space-between;
-    font-family: 'Poppins', sans-serif;
-    padding: 2%;
-    border-radius: 20px;
+  display: none;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 80vh;
+  background-color: rgb(255, 255, 255);
+  align-items: center;
+  flex-direction: column;
+  justify-content: space-between;
+  font-family: 'Poppins', sans-serif;
+  padding: 2%;
+  border-radius: 20px;
 }
 
 .modal h1{
@@ -362,6 +342,7 @@ h1{
  .buttons{
     display: flex;
     flex-direction: row-reverse;
+    width: 100%;
  }
 
  #primeiro_botao{
@@ -374,7 +355,7 @@ h1{
       border: none;
       padding: 15px;
       background-color: #A71E34;
-      margin-right: 5%;
+      
    }
   
   #segundo_botao{
@@ -387,27 +368,4 @@ h1{
      font-weight: 700;
      border: none;
      padding: 15px
-  }
-
-  #icon input[type="text"] {
-    padding-left: 40px;
-  }
-  
- #icon {
-    position: relative;
-  }
-  
- #icon i {
-    position: absolute;
-    right: 1%;
-    top: 45%;
-    padding: 9px 8px;
-    color: #808080;
-    transition: 0.3s;
-  }
-  
- #icon.inputIconBg i {
-    background-color: #aaa;
-    padding: 9px 4px;
-    border-radius: 4px 0 0 4px;
   }
