--- a/instituicao/perfil/infos_pagamento/style.css
+++ b/instituicao/perfil/infos_pagamento/style.css
@@ -80,7 +80,7 @@
     color: white;
     background-color: #044177;
     border-radius: 30px;
-    padding: 15px
+    padding: 15px;
  }
 
  #segundo_botao{
