--- a/instituicao/usuarios/vizualizacao/style.css
+++ b/instituicao/usuarios/vizualizacao/style.css
@@ -1,39 +1,58 @@
-*{
+* {
     margin: 0;
     padding: 0;
-    box-sizing: border-box; 
- }
+    box-sizing: border-box;
+}
 
- body{
-    font-family: 'Poppins', sans-serif;
-    
- }
- .container-geral{
-     padding: 2% 10%;
+body {
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-position: center center;
+}
+
+.space {
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-betweena;
-    
+    justify-content: space-between;
+    align-items: center;
 }
- .container{
-     display: flex;
-     flex-direction: column;
-     align-items: center;
-     height: 100vh;
-    width: 100vw;
- }
-#ul::-webkit-scrollbar {
-    width: 12px;               /* width of the entire scrollbar */
-  }
-  
-#ul::-webkit-scrollbar-thumb {
-    background-color: #05204A;    /* color of the scroll thumb */
-    border-radius: 10px;       /* roundness of the scroll thumb */
-    border:none;  /* creates padding around scroll thumb */
-  }
 
-.usuarios_existentes{
+.container-geral {
+    padding: 2% 10%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    height: 90vh;
+    width: 100vw;
+}
+
+#ul::-webkit-scrollbar {
+    width: 12px;
+    /* width of the entire scrollbar */
+}
+
+#ul::-webkit-scrollbar-thumb {
+    background-color: #05204A;
+    /* color of the scroll thumb */
+    border-radius: 10px;
+    /* roundness of the scroll thumb */
+    border: none;
+    /* creates padding around scroll thumb */
+}
+
+.usuarios_existentes {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -41,15 +60,14 @@
     color: #044177;
     font-size: 50px;
     font-weight: 700;
-    margin-bottom: 3%;
 }
 
-.usuarios_existentes input{
+.usuarios_existentes input {
     background-color: #E3E3E3;
     border-radius: 10px;
     border: none;
     padding: 15px 50px 15px 15px;
-    width: 180%;
+    width: 15vw;
     margin-bottom: 10%;
 }
 
@@ -60,44 +78,47 @@
 }
 
 .modal-excluir {
-  display: none;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 80vh;
-  background-color: rgb(255, 255, 255);
-  align-items: center;
-  flex-direction: column;
-  justify-content: space-between;
-  font-family: 'Poppins', sans-serif;
-  padding: 2%;
-  border-radius: 20px;
- }
- 
- .modal-excluir h1{
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    width: 50vw;
+    height: 60vh;
+    background-color: rgb(255, 255, 255);
+    display: none;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+    justify-content: space-around;
+    font-family: 'Poppins', sans-serif;
+    border-radius: 20px;
+    padding: 15px;
+}
+
+.icone p .modal-excluir h1 {
+    font-size: 40px;
+    font-weight: 900;
+    text-align: center;
+    color: #05204A;
+}
+
+.modal-excluir h2 {
+    margin: 2% 0 2% 0;
     font-size: 30px;
     font-weight: 700;
     text-align: center;
-    color: #05204A;
- }
- 
- .modal-excluir h2{
-    margin: 2% 0 2% 0;
-    font-size: 20px;
-    font-weight: 100;
-    text-align: center;
     color: #A71E34;
- }
- 
- .modal-excluir label{
-    font-size: 20px;
-    font-weight:1100;
-    color: #05204A;
- }
- 
+}
 
+.modal-excluir label {
+    font-size: 30px;
+    font-weight: 400;
+    color: #05204A;
+}
+
+.modal-excluir input {
+    width: 45vw;
+}
 
 .tipo_usuario ul li {
     list-style: none;
@@ -129,19 +150,19 @@
     color: #fff;
 }
 
-img{
+img {
     width: 100%;
     margin-bottom: 1%;
     margin-top: 2%;
 }
 
-h1{
+h1 {
     font-size: 50px;
     font-weight: 700;
     color: #05204A;
 }
 
-#ul{
+#ul {
     width: 100%;
     height: 70%;
     border: 2px solid;
@@ -151,129 +172,155 @@ h1{
     overflow-y: auto;
 }
 
-#li{
+#li {
     border: none;
     display: flex;
     flex-direction: row;
     align-items: center;
 }
 
-#icone{
+#icone {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-#turma_selecionada{
+#turma_selecionada {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 30%;
-    height:80vh;
+    width: 30vw;
+    height: 55vh;
     padding: 1% 5%;
     background-color: #F4F4F4;
     border-radius: 20px;
     overflow-y: auto;
+    margin-left: 3%;
+}
 
-  }
-
-  .titulo{
-      color: #044177;
-      font-size: 50px;
+.titulo {
+    color: #044177;
+    font-size: 50px;
     font-weight: 700;
     margin: 1%;
-  }
+}
 
- #turma_selecionada p{
+#turma_selecionada p {
     font-size: 20px;
     font-weight: 400;
 }
 
 #icon {
     position: relative;
-  }
-  
- #icon i {
+}
+
+#icon i {
     position: absolute;
-    right: -40%;
-    top: 10%;
+    right: 0%;
+    top: 8%;
     padding: 9px 8px;
     color: #808080;
     transition: 0.3s;
-  }
-  
- #icon.inputIconBg i {
+}
+
+#icon.inputIconBg i {
     background-color: #aaa;
     padding: 9px 4px;
     border-radius: 4px 0 0 4px;
-  }
+}
 
-  #selected{
+#icon-edit {
+    position: relative;
+}
+
+#icon-edit i {
+    position: absolute;
+    right: 2%;
+    top: 45%;
+    padding: 9px 8px;
+    color: #808080;
+    transition: 0.3s;
+}
+
+#icon-edit.inputIconBg i {
+    background-color: rgb(255, 0, 0);
+    padding: 9px 4px;
+    border-radius: 4px 0 0 4px;
+}
+
+#selected {
     display: flex;
     flex-direction: column;
     justify-content: center;
-  }
-  .li-user{
-      display: flex;
-      flex-direction: row;
-      justify-content: center;
-  }
+}
 
-  #icone{
-      margin: 0 15% 0 5%;
-  }
+.li-user {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
 
-  #selected::-webkit-scrollbar {
-    width: 12px;               /* width of the entire scrollbar */
-  }
-  
+#icone {
+    margin: 0 15% 0 5%;
+}
+
+#selected::-webkit-scrollbar {
+    width: 12px;
+    /* width of the entire scrollbar */
+}
+
 #selected::-webkit-scrollbar-thumb {
-    background-color: #05204A;    /* color of the scroll thumb */
-    border-radius: 10px;       /* roundness of the scroll thumb */
-    border:none;  /* creates padding around scroll thumb */
-  }
+    background-color: #05204A;
+    /* color of the scroll thumb */
+    border-radius: 10px;
+    /* roundness of the scroll thumb */
+    border: none;
+    /* creates padding around scroll thumb */
+}
 
-  .primeiro_botao{
+.primeiro_botao {
     margin-top: 2vh;
-      width: 12vw;
-      background-color: rgba(240, 248, 255, 0);
-      color: white;
-      font-weight: 700;
-      border-radius: 30px;
-      border: none;
-      padding: 15px;
-      background-color: #05204A;
-      margin-right: 5%;
-   }
-   .bg{
+    width: 12vw;
+    background-color: rgba(240, 248, 255, 0);
+    color: white;
+    font-weight: 700;
+    border-radius: 30px;
+    border: none;
+    padding: 15px;
+    background-color: #05204A;
+    margin-right: 5%;
+}
+
+.bg {
     position: fixed;
     z-index: 1;
-    width: 100%;
-    height: 100%;
     display: none;
     background-blend-mode: darken;
     background-color: rgba(0, 0, 0, 0.658);
+    width: 100vw;
+    height: 100vh;
 }
-   #terceiro_botao{
-    margin-top: 2vh;
-     width: 98%;
-     background-color: rgba(240, 248, 255, 0);
-     color: white;
-     background-color: #044177;
-     border-radius: 30px;
-     font-weight: 700;
-     border: none;
-     padding: 15px
-  }
 
-  .modal {
+#terceiro_botao {
+    margin-top: 2vh;
+    width: 98%;
+    background-color: rgba(240, 248, 255, 0);
+    color: white;
+    background-color: #044177;
+    border-radius: 30px;
+    font-weight: 700;
+    border: none;
+    padding: 15px
+}
+
+.modal {
     display: none;
     top: 0;
     right: 0;
     bottom: 0;
     left: 0;
     width: 100%;
-    height: 80vh;
+    height: 50vh;
     background-color: rgb(255, 255, 255);
     align-items: center;
     flex-direction: column;
@@ -283,89 +330,95 @@ h1{
     border-radius: 20px;
 }
 
-.modal-editar {
-  display: none;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 80vh;
-  background-color: rgb(255, 255, 255);
-  align-items: center;
-  flex-direction: column;
-  justify-content: space-between;
-  font-family: 'Poppins', sans-serif;
-  padding: 2%;
-  border-radius: 20px;
+.lab-inp {
+    margin-top: 1%;
+    margin-bottom: 1%;
 }
 
-.modal h1{
+.modal-editar {
+    display: none;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 50vh;
+    background-color: rgb(255, 255, 255);
+    align-items: center;
+    flex-direction: column;
+    justify-content: space-between;
+    font-family: 'Poppins', sans-serif;
+    padding: 2%;
+    border-radius: 20px;
+    width: 100vw;
+}
+
+.modal h1 {
     font-weight: 700;
     color: #05204A;
 }
 
-  .nome_do_usuario{
+.nome_do_usuario {
     background-color: #E3E3E3;
     border-radius: 10px;
     border-bottom: 1px solid #05204A;
     padding: 15px
- }
-  .email_usuario{
+}
+
+.email_usuario {
     background-color: #E3E3E3;
     border-radius: 10px;
     border-bottom: 1px solid #05204A;
     padding: 15px
- }
- 
- .senha{
+}
+
+.senha {
     background-color: #E3E3E3;
     border-radius: 10px;
     border-bottom: 1px solid #05204A;
     padding: 15px
- }
- 
- .tipo-select{
+}
+
+.tipo-select {
     background-color: #E3E3E3;
     border-radius: 10px;
     border-bottom: 1px solid #05204A;
     padding: 15px
- }
- 
- .turma-select{
+}
+
+.turma-select {
     background-color: #E3E3E3;
     border-radius: 10px;
     border-bottom: 1px solid #05204A;
     padding: 15px
- }
- 
- .buttons{
+}
+
+.buttons {
     display: flex;
     flex-direction: row-reverse;
     width: 100%;
- }
+}
 
- #primeiro_botao{
+#primeiro_botao {
     margin-top: 2vh;
-      width: 98%;
-      background-color: rgba(240, 248, 255, 0);
-      color: white;
-      font-weight: 700;
-      border-radius: 30px;
-      border: none;
-      padding: 15px;
-      background-color: #A71E34;
-      
-   }
-  
-  #segundo_botao{
+    width: 98%;
+    background-color: rgba(240, 248, 255, 0);
+    color: white;
+    font-weight: 700;
+    border-radius: 30px;
+    border: none;
+    padding: 15px;
+    background-color: #A71E34;
+}
+
+#segundo_botao {
     margin-top: 2vh;
-     width: 98%;
-     background-color: rgba(240, 248, 255, 0);
-     color: white;
-     background-color: #044177;
-     border-radius: 30px;
-     font-weight: 700;
-     border: none;
-     padding: 15px
-  }
+    width: 98%;
+    background-color: rgba(240, 248, 255, 0);
+    color: white;
+    background-color: #044177;
+    border-radius: 30px;
+    font-weight: 700;
+    border: none;
+    padding: 15px
+}
