--- a/instituicao/usuarios/cadastro/style.css
+++ b/instituicao/usuarios/cadastro/style.css
@@ -34,7 +34,7 @@
     bottom: 0;
     left: 0;
     width: 100%;
-    height: 80vh;
+    height: 50vh;
     background-color: rgb(255, 255, 255);
     display: none;
     align-items: center;
@@ -44,6 +44,24 @@
     padding: 2%;
     border-radius: 20px;
 }
+
+.modal-editar {
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 50vh;
+  background-color: rgb(255, 255, 255);
+  display: none;
+  align-items: center;
+  flex-direction: column;
+  justify-content: space-between;
+  font-family: 'Poppins', sans-serif;
+  padding: 2%;
+  border-radius: 20px;
+}
+
 
 .modal h1{
     font-weight: 700;
@@ -142,6 +160,11 @@ img{
     font-family: 'Poppins', sans-serif;
     font-weight: 400;
   }
+
+  .lab-inp {
+    margin-top: 1%;
+    margin-bottom: 1%;
+}
 
 .turma{
       font-size: 20px;
