--- a/home/compra/pagamento/pagamento.css
+++ b/home/compra/pagamento/pagamento.css
@@ -7,7 +7,6 @@ main {
     height: 100vh;
     display: flex;
     flex-direction: column;
-     /* align-items: center; */
 }
 
 .titulo_infos_pagamento {
@@ -87,16 +86,35 @@ form {
     border-radius: 5px;
 }
 
-.infos_gerais{
+form input {
+    height: 35px;
+    border-radius: 5px;
+    padding: 10px;
+    border: 2px solid #C2C2C2;
+}
+
+form label {
+    font-weight: bold;
+}
+
+.infos_gerais {
     display: flex;
     justify-content: space-between;
     width: 100%;
 }
 
-.infos_instituicao{
-    /* background-color: aliceblue; */
+.infos_instituicao {
+    /* background-color: teal; */
     width: 50%;
     padding: 30px;
+}
+
+.infos_instituicao, .infos_cartao {
+    gap: 20px;
+}
+
+.infos_instituicao input {
+    width: 20vw
 }
 
 form .infos_instituicao .input_instituicao {
@@ -104,15 +122,24 @@ form .infos_instituicao .input_instituicao {
     justify-content: space-between;
 }
 
-.infos_cartao{
+.infos_cartao {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     width: 50%;
     height: 100%;
     padding: 30px;
-    /* background-color: blue; */
+    /* background-color: tomato; */
+    border-left: 1px solid #C2C2C2;
+}
+
+.infos_cartao input {
+    width: 20vw;
+}
+
+#inputNumeroCartao, #inputNomeCartao {
+    width: 100%;
 }
 
 form input::-webkit-outer-spin-button,
@@ -127,7 +154,7 @@ input[type=number] {
 
 .inputs_cartao{
     display: flex;
-    justify-content: space-between;
+    gap: 10px;
     width: 100%;
 }
 
@@ -135,9 +162,10 @@ input[type=number] {
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 50px;
+    padding-top: 30px;
     /* background-color: aqua; */
     width: 100%;
+    border-top: 1px solid #C2C2C2;
 }
 
 form input[type="submit"] {
@@ -159,209 +187,29 @@ form input[type="submit"] {
     transition: .5s;
   }
 
-/* .form_pagamento {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 95vw;
-    height: 620px;
-    background-color: #F5F6FC;
-    border: 1px solid #C2C2C2;
-    border-radius: 5px;
-    margin-left: 20px;
-}
-
-.infos_gerais {
-    background-color: tomato;
-}
-
-.input_instituicao.sucesso input {
-    border: 2px solid #4ECA64;
-}
-
-.input_instituicao.erro input {
-    border: 2px solid #DB5A5A;
-}
-
-.input_instituicao p, .input_cartao_instituicao p{
-    visibility: hidden;
-    font-size: 10px;
-}
-
-.form_pagamento input::-webkit-outer-spin-button,
-input::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
-}
-
-input[type=number] {
-    -moz-appearance: textfield;
-  }
-
-.form_pagamento label {
-    font-weight: bold;
-}
-
-.form_pagamento input {
-    height: 35px;
-    border-radius: 5px;
-    padding: 10px;
-    border: 2px solid #C2C2C2;
-}
-
-.form_pagamento .infos_gerais {
-    display: flex;
-     flex-direction: column; 
-    width: 95vw;
-    height: 500px;
-}
-
-.form_pagamento .infos_instituicao, .cartao_instituicao {
-    display: flex;
-    flex-direction: column;
-    width: 50%;
-    gap: 20px;
-    padding: 20px;
-}
-
-.form_pagamento .infos_instituicao {
-    margin-left: 20px;
-    margin-right: 100px;
-}
-
-.form_pagamento .infos_instituicao input {
-    width: 250px;
-}
-
-.form_pagamento .infos_instituicao .input_instituicao {
-    display: flex;
-    justify-content: space-between;
-}
-
-.form_pagamento .cartao_instituicao input {
-    width: 550px;
-}
-
-.form_pagamento .cartao_instituicao {
-    display: flex;
-    align-items: center;
-    border-left: 1px solid #C2C2C2;
-}
-
-.form_pagamento .cartao_instituicao .inputs_cartao {
-    display: flex;
-    width: 550px;
-    gap: 20px;
-    margin-bottom: 20px;
-}
-
-.btn_finalizar {
-    height: 150px;
-    width: 95vw;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-top: 1px solid #C2C2C2;
-}
-
-.form_pagamento input[type="submit"] {
-    width: 450px;
-    height: 50px;
-    border: 1px solid;
-    background: #0987F7;
-    border-radius: 25px;
-    font-size: 18px;
-    color: #e9f4fb;
-    font-weight: 700;
-    cursor: pointer;
-    outline: none;
-    margin-bottom: 40px;
-  }
-  
-  .form_pagamento input[type="submit"]:hover {
-    border-color: #0987F7;
-    transition: .3s;
-  }
-
-  @media (max-width: 1200px) {
-
-    .form_pagamento label {
-        max-width: 80px;
-    }
-
-    .form_pagamento .infos_instituicao .input_instituicao {
-        display: flex;
-        gap: 30px;
-    }
-
-    .form_pagamento .cartao_instituicao input {
-        width: 400px;
-    }
-
-    .form_pagamento .cartao_instituicao .inputs_cartao {
-        width: 400px;
-    }
-  }
-
   @media (max-width: 768px) {
 
-    .form_pagamento {
-        height: 1060px;
-        align-items: center;
+    main, form input {
+        font-size: 13px;
     }
 
-    .form_pagamento .infos_gerais {
-        height: 950px;
-        display: flex;
+    .infos_gerais {
         flex-direction: column;
         align-items: center;
-        padding: 0px;
+        justify-content: center;
+    }
+    
+    .infos_instituicao, .infos_cartao {
+        width: 100%;
     }
 
-    .form_pagamento, .infos_pagamento {
-        width: 90vw;
+    .infos_instituicao input, .infos_cartao input {
+        width: 40vw
     }
 
-    .form_pagamento .cartao_instituicao input {
-        width: 400px;
-    }
-
-    .form_pagamento .infos_instituicao {
-        margin-left: 100px;
-        width: 85vw;
-        
-    }
-
-    .form_pagamento .cartao_instituicao {
-        width: 90vw;
+    .infos_cartao {
         border-left: 0;
         border-top: 1px solid #C2C2C2;
     }
 
-    .form_pagamento .cartao_instituicao .inputs_cartao  {
-        justify-content: center;
-    }
-
-    .form_pagamento .cartao_instituicao img {
-        width: 250px;
-    }
-    
-    .form_pagamento input[type="submit"] {
-        width: 300px;
-    }
-
-    .btn_finalizar {
-        width: 89.5vw;
-         height: 100px; 
-        border-top: 1px solid #C2C2C2;
-         background-color: #0987F7; 
-        justify-content: center;
-        margin-left: 16px;
-
-    }
-
-     footer {
-        display: none;
-    } 
-
-  } */
+  }
